HTML + SASS + Lógica Perfil de Usuarios

--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -1,13 +1,18 @@
-// ============================
 // COLORES PRINCIPALES
-// ============================
-$color-principal: #ff6600;
-$color-secundario: #ff8533;
-$color-fondo: #F2F2F2;
-$color-azul: rgb(66, 97, 238);
-$color-texto: #3a3a3a;
+$color-principal: #34758f;
+$color-secundario: #79C7D9;
+$color-fondo: #BF705E;
+$color-azul: #60A4BF;
+$color-texto: #D9B19A;
 $color-texto-claro: #f2f2f2;
-$color-header: #ffd699;
+$color-claro: #f2f2f2;
+$color-naranja-claro: #ffd699;
+$sombra:#BF705E;
+
+// Colores de efecto
+$danger: #e12929;
+$user: #ffffff;
+
 
 // ============================
 // FUENTES
