--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -7,7 +7,7 @@ $color-texto: #D9B19A;
 $color-texto-claro: #f2f2f2;
 $color-claro: #f2f2f2;
 $color-naranja-claro: #ffd699;
-$sombra:#BF705E;
+$sombra:#0000007b;
 
 // Colores de efecto
 $danger: #e12929;
